# project-2

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  nginx.conf  pyproject.toml
app/: database.py  main.py  models.py  schemas.py  settings.py
app/api/: router.py
app/api/auth/: dependencies.py  router.py  services.py
app/api/users/: router.py  services.py
certificates/: README.md
migrations/: env.py
